# deps_visionary

./: .gitignore  README.md  deploy.sh  main.py  pyproject.toml  requirements.txt  settings.yml
deps_visionary/: __init__.py  log.py  tasks.py
deps_visionary/api/: models.py
deps_visionary/gitlabmgr/: api.py  models.py
deps_visionary/internal/: parser.py  projects_metadata.py  settings.py  tree.py
deps_visionary/parsers/: __init__.py  conanfile.py  docker.py  docker_compose.py  requirements.py
frontend/: index.html  index.js
nginx/: deps_visionary.conf
supervisord/: deps_visionary.conf
